@@ -6025,10 +6025,10 @@
         "obj_id": 309,
         "sizeTag": "memoryLarge",
         "type": "enemy",
+        "replace_as": "Cannon Gun",
         "variations": [
             "Assassin"
         ],
-        "replace_as": null,
         "source_replace_allowed": true,
         "msn_replace_allowed": true,
         "tags": [],
@@ -14674,12 +14674,12 @@
         "model": "M_EX550",
         "obj_id": 7,
         "sizeTag": "memorySmall",
+        "replace_as": "Cannon Gun",
         "type": "enemy",
         "variations": [
             "Minute Bomb",
             "Minute Bomb (99 0)"
         ],
-        "replace_as": null,
         "source_replace_allowed": true,
         "msn_replace_allowed": true,
         "tags": [],
@@ -14727,12 +14727,12 @@
         "model": "M_EX550",
         "obj_id": 7,
         "sizeTag": "memorySmall",
+        "replace_as": "Cannon Gun",
         "type": "enemy",
         "variations": [
             "Minute Bomb",
             "Minute Bomb (99 0)"
         ],
-        "replace_as": null,
         "source_replace_allowed": true,
         "msn_replace_allowed": true,
         "tags": [],
@@ -14771,6 +14771,7 @@
         "name": "Minute Bomb WI",
         "enabled": true,
         "variationof": "Minute Bomb",
+        "replace_as": "Cannon Gun",
         "enmp_index": 57,
         "hp": 100,
         "level": 99,
@@ -14782,7 +14783,6 @@
         "variations": [
             "Minute Bomb WI"
         ],
-        "replace_as": null,
         "source_replace_allowed": true,
         "msn_replace_allowed": true,
         "tags": [],
